--- a/docs/docs/cmd/spo/homesite/homesite-list.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-list.mdx
@@ -18,7 +18,7 @@ m365 spo homesite list [options]
 
 ## Examples
 
-Lists all the Home Sites
+List all the home sites
 
 ```sh
 m365 spo homesite list
