➕ Add entraGroupId and entraGroupName parameters

--- a/docs/docs/cmd/spo/folder/folder-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleassignment-add.mdx
@@ -20,13 +20,19 @@ m365 spo folder roleassignment add [options]
 : The server- or site-relative decoded URL of the folder.
 
 `--principalId [principalId]`
-: The SharePoint principal id. It may be either an user id or group id for which the role assignment will be addd. Specify either `upn`, `groupName` or `principalId` but not multiple.
+: The SharePoint principal id. It may be either an user id or group id for which the role assignment will be addd. Specify either `upn`, `groupName`, `principalId`, `entraGroupId` or `entraGroupName` but not multiple.
 
 `--upn [upn]`
-: The upn/email of the user. Specify either `upn`, `groupName` or `principalId` but not multiple.
+: The upn/email of the user. Specify either `upn`, `groupName`, `principalId`, `entraGroupId` or `entraGroupName` but not multiple.
 
 `--groupName [groupName]`
-: The Microsoft Entra or SharePoint group name. Specify either `upn`, `groupName` or `principalId` but not multiple.
+: The Microsoft Entra or SharePoint group name. Specify either `upn`, `groupName`, `principalId`, `entraGroupId` or `entraGroupName` but not multiple.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group to add. Specify either `upn`, `groupName`, `principalId`, `entraGroupId` or `entraGroupName` but not multiple.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group to add. Specify either `upn`, `groupName`, `principalId`, `entraGroupId` or `entraGroupName` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of the role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
@@ -61,6 +67,12 @@ Add the role assignment to the root folder based on the upn and role definition 
 
 ```sh
 m365 spo folder roleassignment add --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --folderUrl "/Shared Documents" --upn "test@contoso.onmicrosoft.com" --roleDefinitionName "Edit"
+```
+
+Add the role assignment to the specified folder based on the Entra Group Id and role definition id.
+
+```sh
+m365 spo folder roleassignment add --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --folderUrl "/Shared Documents/FolderPermission" --entraGroupId '27ae47f1-48f1-46f3-980b-d3c1470e398d' --roleDefinitionId 1073741827 
 ```
 
 ## Response
