--- a/docs/docs/cmd/spo/homesite/homesite-list.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-list.mdx
@@ -79,7 +79,7 @@ https://contoso.sharepoint.com/sites/TheLanding           The Landing
   <TabItem value="Markdown">
 
   ```md
-  m365 spo homesite list --output md      
+  m365 spo homesite list
 # spo homesite list 
 
 Date: 11/18/2024
