Adds new contributor

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -336,6 +336,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: ''
   },
   {
+    name: 'Herco van brug',
+    company: '',
+    github: 'brugh',
+    x: ''
+  },
+  {
     name: 'Hugo Bernier',
     company: 'Microsoft',
     github: 'hugoabernier',
