Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -37,6 +37,9 @@ sidebar_position: 4
 - enhanced `spo site admin` commands to retrieve the site ID as admin. Closes [#6443](https://github.com/pnp/cli-microsoft365/issues/6443)
 - fixed [spo listitem batch set](../cmd/spo/listitem/listitem-batch-set.mdx) command to escape XML-special characters [#6430](https://github.com/pnp/cli-microsoft365/issues/6430)
 - aligned all sample scripts with the latest v10 release [#6369](https://github.com/pnp/cli-microsoft365/issues/6369)
+- updated entra group/app/administrativeunit get/list commands [#6315](https://github.com/pnp/cli-microsoft365/issues/6315)
+- added customer quotes docs page
+- fixed prompting for entra app [#6498](https://github.com/pnp/cli-microsoft365/issues/6498)
 
 ## [v10.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.0.0)
 
