update to move home site list under tenant location

--- a/docs/docs/cmd/spo/tenant/tenant-homesite-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-list.mdx
@@ -9,7 +9,7 @@ Lists all home sites
 ## Usage
 
 ```sh
-m365 spo homesite list [options]
+m365 spo tenant homesite list [options]
 ```
 
 ## Options
@@ -21,7 +21,7 @@ m365 spo homesite list [options]
 List all home sites
 
 ```sh
-m365 spo homesite list
+m365 spo tenant homesite list
 ```
 
 ## Response
