Adds contributor quote

--- a/docs/docs/about/testimonials-quotes.mdx
+++ b/docs/docs/about/testimonials-quotes.mdx
@@ -68,3 +68,15 @@ If you would like to share your feedback with us, please [start a new discussion
     <p>I’ve been watching the project for quite some time, it’s very high quality, backed by a very rich group of contributors that actively expand the product. It has a set of unique capabilities that complement other existing tools, great samples, great documentation. I’ve always seen the CLI for Microsoft 365 project as an exemplar to how to create and maintain an awesome community with a great tool!</p>
   </div>
 </div>
+
+## NANDDEEP NACHAN
+
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('!!url-loader!../images/testimonials-companies-logo/nanddeep-nachan.png').default} alt='Nanddeep Nachan' />
+    <p>Profile: https://www.linkedin.com/in/nanddeepnachan/</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>The CLI for Microsoft 365 is an incredible tool that empowers customers to automate and streamline their tasks across Microsoft 365 services with ease and flexibility. Its cross-platform capabilities make it a versatile choice for managing SharePoint, Teams, and more, reducing manual efforts and enhancing productivity. <br /> As an active contributor to this project, I am proud to be part of a community driving innovation and simplifying Microsoft 365 management for users worldwide.</p>
+  </div>
+</div>
