Adds testimonial from Nanddeep Nachan. Closes #6508

--- a/docs/docs/about/testimonials-quotes.mdx
+++ b/docs/docs/about/testimonials-quotes.mdx
@@ -13,7 +13,7 @@ If you would like to share your feedback with us, please [start a new discussion
 
 <div className='row testimonial'>
   <div className='col testimonial-image'>
-    <img src={require('!!url-loader!../images/testimonials-companies-logo/wm-reply.png').default} alt='WM Remote' />
+    <img src={require('@site/docs/images/testimonials-companies-logo/wm-reply.png').default} alt='WM Remote' />
     <p>Company Site: https://www.reply.com/wm-reply</p>
   </div>
   <div className='col testimonial-quote'>
@@ -25,7 +25,7 @@ If you would like to share your feedback with us, please [start a new discussion
 
 <div className='row testimonial'>
   <div className='col testimonial-image'>
-    <img style={{background: '#ffffff', padding: 5 + 'px'}} src={require('!!url-loader!../images/testimonials-companies-logo/andrew-connell.png').default} alt='Andrew Connell' />
+    <img style={{background: '#ffffff', padding: 5 + 'px'}} src={require('@site/docs/images/testimonials-companies-logo/andrew-connell.png').default} alt='Andrew Connell' />
     <p>Profile: https://www.linkedin.com/in/andrewconnell/ | Company Site: https://www.voitanos.io/</p>
   </div>
   <div className='col testimonial-quote'>
@@ -37,7 +37,7 @@ If you would like to share your feedback with us, please [start a new discussion
 
 <div className='row testimonial'>
   <div className='col testimonial-image'>
-    <img src={require('!!url-loader!../images/testimonials-companies-logo/lego-cli.png').default} alt='LEGO Luise Freese' />
+    <img src={require('@site/docs/images/testimonials-companies-logo/lego-cli.png').default} alt='LEGO Luise Freese' />
     <p>Profile: https://www.linkedin.com/in/luisefreese/</p>
   </div>
   <div className='col testimonial-quote'>
@@ -49,7 +49,7 @@ If you would like to share your feedback with us, please [start a new discussion
 
 <div className='row testimonial'>
   <div className='col testimonial-image'>
-    <img src={require('!!url-loader!../images/testimonials-companies-logo/pla-easy-life-365.png').default} alt='EasyLife 365' />
+    <img src={require('@site/docs/images/testimonials-companies-logo/pla-easy-life-365.png').default} alt='EasyLife 365' />
     <p>Company Site: https://www.easylife365.cloud/</p>
   </div>
   <div className='col testimonial-quote'>
@@ -61,10 +61,22 @@ If you would like to share your feedback with us, please [start a new discussion
 
 <div className='row testimonial'>
   <div className='col testimonial-image'>
-    <img src={require('!!url-loader!../images/testimonials-companies-logo/paul.jpg').default} alt='Paul Bullock' />
+    <img src={require('@site/docs/images/testimonials-companies-logo/paul.jpg').default} alt='Paul Bullock' />
     <p>Profile: https://linktr.ee/pkbullock</p>
   </div>
   <div className='col testimonial-quote'>
     <p>I’ve been watching the project for quite some time, it’s very high quality, backed by a very rich group of contributors that actively expand the product. It has a set of unique capabilities that complement other existing tools, great samples, great documentation. I’ve always seen the CLI for Microsoft 365 project as an exemplar to how to create and maintain an awesome community with a great tool!</p>
+  </div>
+</div>
+
+## NANDDEEP NACHAN
+
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('@site/docs/images/testimonials-companies-logo/nanddeep-nachan.png').default} alt='Nanddeep Nachan' />
+    <p>Profile: https://www.linkedin.com/in/nanddeepnachan/</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>The CLI for Microsoft 365 is an incredible tool that empowers users to automate and streamline their tasks across Microsoft 365 services with ease and flexibility. Its cross-platform capabilities make it a versatile choice for managing SharePoint, Teams, and more, reducing manual effort and boosting productivity. <br /> As an active contributor to this project, I am proud to be part of a community that drives innovation and simplifies Microsoft 365 management for users worldwide.</p>
   </div>
 </div>
