--- a/docs/docs/cmd/spo/user/user-ensure.mdx
+++ b/docs/docs/cmd/spo/user/user-ensure.mdx
@@ -18,8 +18,8 @@ m365 spo user ensure [options]
 `-u, --webUrl <webUrl>`
 : Absolute URL of the site.
 
-`--entraId [--entraId]`
-: Id of the user in Entra. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+`--entraId [entraId]`
+: Id of the user in Entra ID. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. john@contoso.com). Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
@@ -38,35 +38,31 @@ m365 spo user ensure [options]
 
 ## Examples
 
-Ensures a user by its Entra Id.
+Ensure a user by its Entra Id.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --entraId e254750a-eaa4-44f6-9517-b74f65cdb747
 ```
 
-Ensures a user by its user principal name.
+Ensure a user by its user principal name.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --userName john@contoso.com
 ```
 
-Ensures a user by its login name.
-
-```sh
-m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --loginName "c:0t.c|tenant|e08e899f-ba40-4e91-ab36-44d4fbaa454e"
-```
+Ensure a user by its login name.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --loginName "i:0#.f|membership|john.doe@contoso.com"
 ```
 
-Ensures a user by ID of the Microsoft Entra group.
+Ensure a Microsoft Entra group by ID.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupId e08e899f-ba40-4e91-ab36-44d4fbaa454e
 ```
 
-Ensures a user by display name of the Microsoft Entra group.
+Ensure a Microsoft Entra group by display name.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupName "Marketing team"
