Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,9 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
-## [v10.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.1.0)
+## v10.2.0 (Beta)
 
 ### New commands
+
+**Entra ID:**
+
+- [entra roledefinition list](../cmd/entra/roledefinition/roledefinition-list.mdx) - returns a list of all Microsoft Entra ID role definitions [#6464](https://github.com/pnp/cli-microsoft365/issues/6464)
+
+### Changes
+
+- fixed an issue where removing entra app permissions fails when a service principal doesn't exist [#6291](https://github.com/pnp/cli-microsoft365/issues/6291)
+
+## [v10.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.1.0)
 
 **SharePoint Embedded:**
 
@@ -40,6 +50,7 @@ sidebar_position: 4
 - updated entra group/app/administrativeunit get/list commands [#6315](https://github.com/pnp/cli-microsoft365/issues/6315)
 - added customer quotes docs page
 - fixed prompting for entra app [#6498](https://github.com/pnp/cli-microsoft365/issues/6498)
+- fixed an issue where removing entra app permissions fails when a service principal doesn't exist [#6291](https://github.com/pnp/cli-microsoft365/issues/6291)
 
 ## [v10.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.0.0)
 
