Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,7 +10,13 @@ sidebar_position: 4
 
 **Entra ID:**
 
+- [entra roledefinition get](../cmd/entra/roledefinition/roledefinition-get.mdx) - retrieves a Microsoft Entra ID role definition [#6465](https://github.com/pnp/cli-microsoft365/issues/6465)
 - [entra roledefinition list](../cmd/entra/roledefinition/roledefinition-list.mdx) - returns a list of all Microsoft Entra ID role definitions [#6464](https://github.com/pnp/cli-microsoft365/issues/6464)
+- [entra roledefinition remove](../cmd/entra/roledefinition/roledefinition-remove.mdx) - removes a custom Microsoft Entra ID role definition [#6468](https://github.com/pnp/cli-microsoft365/issues/6468)
+
+**Tenant:**
+
+- [tenant people pronouns get](../cmd/tenant/people/people-pronouns-get.mdx) - retrieves information about pronouns settings for an organization [#6206](https://github.com/pnp/cli-microsoft365/issues/6206)
 
 ### Changes
 
