Adds missing options header to docs page

--- a/docs/docs/cmd/tenant/people/people-pronouns-get.mdx
+++ b/docs/docs/cmd/tenant/people/people-pronouns-get.mdx
@@ -12,6 +12,8 @@ Retrieves information about pronouns settings for an organization
 m365 tenant people pronouns get [options]
 ```
 
+## Options
+
 <Global />
 
 ## Examples
