Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -21,6 +21,7 @@ sidebar_position: 4
 ### Changes
 
 - fixed an issue where removing entra app permissions fails when a service principal doesn't exist [#6291](https://github.com/pnp/cli-microsoft365/issues/6291)
+- updated project & docs dependencies.
 
 ## [v10.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.1.0)
 
