--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -22,6 +22,8 @@ sidebar_position: 4
 
 - fixed an issue where removing entra app permissions fails when a service principal doesn't exist [#6291](https://github.com/pnp/cli-microsoft365/issues/6291)
 - updated project & docs dependencies.
+- fixed killing teams process for 'teams cache remove' [#6515](https://github.com/pnp/cli-microsoft365/issues/6515)
+- fixed copy job polling [#6422](https://github.com/pnp/cli-microsoft365/issues/6422)
 
 ## [v10.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.1.0)
 
