--- a/docs/docs/cmd/spo/tenant/tenant-homesite-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-list.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo homesite list
+# spo tenant homesite list
 
 Lists all home sites
 
