--- a/docs/docs/about/why-cli.mdx
+++ b/docs/docs/about/why-cli.mdx
@@ -6,28 +6,10 @@ sidebar_position: 1
 
 CLI for Microsoft 365 is a cross-platform CLI that allows users on any platform to manage various configuration settings of Microsoft 365.
 
-- CLI for Microsoft 365 offers a variety of commands from many different areas of Microsoft 365, such as:
-  - [SharePoint Online](../cmd/spo/spo-get)
-  - [Teams](../cmd/teams/app/app-install)
-  - [Viva engage](../cmd/viva/engage/engage-search)
-  - [Power Apps](../cmd/pa/app/app-export)
-  - [Power Automate](../cmd/flow/flow-disable)
-  - [Power Platform](../cmd/pp/aibuildermodel/aibuildermodel-get)
-  - [OneDrive](../cmd/onedrive/onedrive-list)
-  - [Planner](../cmd/planner/bucket/bucket-add)
-  - [OneNote](../cmd/onenote/notebook/notebook-add)
-  - [Outlook](../cmd/outlook/mail/mail-send)
-  - [SharePoint Embedded](../cmd/spe/containertype/containertype-add)
-  - and many more...
-
-  Benefits of combining all these areas into single tool:
-  - **Consistency**: Manage all areas in the same way, rather than having to learn how each tool for each area works.
-  - **Interoperability**: Login once, manage everything, and easily pass values from one command in one area to another in another area.
-  - **Convenience**: Install, manage, and learn a single tool.
-
 - Intuitive! If you would like to `add` a new `SharePoint Online` `list` simply write `m365 spo list add` and if you need to do a different action like modifying the list or retrieving it simply change the verb to: `get`, `set`, `remove` etc. 
 - Interactive by default. Starting to use a new CLI is never easy, that's why CLI for Microsoft 365 offers an interactive mode that actively asks (prompts) you for the required options of a command you want to run. You may also [configure autocomplete for commands](../user-guide/completion.mdx) and options that you're typing in the prompt for almost any terminal.
-- [Different `output` modes](../user-guide/cli-output-mode.mdx) allow you to choose how you want to see the results of your commands. You can choose between `json` which is optimized to be used in a script when the output of one command will be used as an input to another command, `text` which is perfect for human reading, and `csv` or even `md` (markdown) which is suitable to create a report based outcome.
+- Managing multiple [connections](../cmd/connection/connection-list)! CLI for Microsoft 365 allows you to sign in to multiple accounts and tenants and just switch between those connections. This means you no longer need to sign out and in when you want to switch to a different tenant.
+- [Different output modes](../user-guide/cli-output-mode.mdx) allow you to choose how you want to see the results of your commands. You can choose between `json` which is optimized to be used in a script when the output of one command will be used as an input to another command, `text` which is perfect for human reading, and `csv` or even `md` (markdown) which is suitable to create a report based outcome.
 - Runs on any device in any shell. CLI for Microsoft 365 runs on Node.js and you can run it on any device and in any shell.  
 - You may use it in CI/CD pipelines. It integrates easily with Azure DevOps and natively with GitHub workflows. CLI has dedicated [GitHub actions](../user-guide/github-actions) which you may use directly in GitHub workflow and it allows you to scaffold a pipeline for [Azure DevOps](../cmd/spfx/project/project-azuredevops-pipeline-add) and [GitHub workflows](../cmd/spfx/project/project-github-workflow-add).
 - ***[Manage SharePoint Framework solutions](../cmd/spfx/spfx-doctor)***. CLI for Microsoft 365 will help you setup your local environment for SPFx development and will help you with common tasks when developing SPFx solutions, like validating its correctness or getting guidance on how to upgrade it.
@@ -35,6 +17,26 @@ CLI for Microsoft 365 is a cross-platform CLI that allows users on any platform 
 - AI, Of course, we have an AI! CLI for Microsoft 365 comes along with an [AI assistant chili 🌶️](../user-guide/chili) that will help you find the right commands for your tasks.
 - How many CLI's allows you to run it as your API in an app? That is what I though. [CLI for Microsoft 365 may be used as an API](../user-guide/use-cli-api) in your Node.js app.
 - You may filter and sort the output of every command. [Filtering and sorting](../user-guide/filter-cli-data.mdx) is a powerful feature that allows you to get only the data you need and in the order you want.
+- Using the [verbose and debug modes](../user-guide/using-cli/#verbose-and-debug-mode) you may get more details about the command execution making everything super transparent what CLI for Microsoft 365 is performing under the hood.
+- CLI for Microsoft 365 offers a variety of commands from many different areas of Microsoft 365, for example:
+  - [Entra ID](../cmd/entra/administrativeunit/administrativeunit-add)
+  - [OneDrive](../cmd/onedrive/onedrive-list)
+  - [OneNote](../cmd/onenote/notebook/notebook-add)
+  - [Outlook](../cmd/outlook/mail/mail-send)
+  - [Planner](../cmd/planner/bucket/bucket-add)
+  - [Power Apps](../cmd/pa/app/app-export)
+  - [Power Automate](../cmd/flow/flow-disable)
+  - [Power Platform](../cmd/pp/aibuildermodel/aibuildermodel-get)
+  - [SharePoint Embedded](../cmd/spe/containertype/containertype-add)
+  - [SharePoint Online](../cmd/spo/spo-get)
+  - [Teams](../cmd/teams/app/app-install)
+  - [Viva engage](../cmd/viva/engage/engage-search)
+  - and many more...
+
+  Benefits of combining all these areas into single tool:
+  - **Consistency**: Manage all areas in the same way, rather than having to learn how each tool for each area works.
+  - **Interoperability**: Login once, manage everything, and easily pass values from one command in one area to another in another area.
+  - **Convenience**: Install, manage, and learn a single tool.
 
 Interested in more? Start with our [user guide](../user-guide/using-cli.mdx) and learn how to use the CLI for Microsoft 365.
 
@@ -50,7 +52,7 @@ You could, but why reinvent the wheel? CLI for Microsoft 365 is a powerful tool 
 
 ### Why not use SharePoint Online Management Shell?
 
-SharePoint Online Management Shell is a great tool, but it's limited to SharePoint Online and only works with Windows PowerShell. Additionally, it only supports SharePoint administration tasks, so you can only use it to run admin-related commands. In contrast, CLI for Microsoft 365 offers a variety of commands from many different areas of Microsoft 365 like SharePoint Online, Teams, Viva Engage, Entra, Power Apps, Power Automate, Power Platform, OneDrive, Planner, OneNote, Outlook, SharePoint Embedded, and many more. It's a more comprehensive tool that can help you manage your Microsoft 365 tenant more efficiently.
+SharePoint Online Management Shell is a great tool, but it's limited to SharePoint Online and only works with Windows PowerShell. Additionally, it only supports SharePoint administration tasks, so you can only use it to run admin-related commands. In contrast, CLI for Microsoft 365 offers a variety of commands from many different areas of Microsoft 365. It's a more comprehensive tool that can help you manage your Microsoft 365 tenant more efficiently.
 
 ### Why not Microsoft Graph CLI or Microsoft Graph PowerShell SDK?
 
@@ -58,4 +60,4 @@ Microsoft Graph CLI and Microsoft Graph PowerShell SDK are amazing, but they are
 
 ### Why not use PnP PowerShell instead?
 
-If you use PowerShell, PnP PowerShell is a convenient solution that you can use to manage different parts of Microsoft 365. CLI for Microsoft 365 offers additional flexibility with the ability to run it in any shell. CLI for Microsoft 365 also offers unique commands to manage SPFx solutions. Whether you're a beginner or an advanced user, and want to use CLI for daily interactive use or scripting, you can configure CLI for Microsoft 365 to your needs making an invaluable tool in your toolbox.
+If you use PowerShell, PnP PowerShell is a convenient solution that you can use to manage different parts of Microsoft 365. CLI for Microsoft 365 offers additional flexibility with the ability to run it in any shell. CLI for Microsoft 365 also offers unique commands to manage SPFx solutions. Whether you're a beginner or an advanced user, and want to use CLI for daily interactive use or scripting, you can configure CLI for Microsoft 365 to your needs making an invaluable tool in your toolbox. CLI for Microsoft 365- offers interactive mode by default which will actively prompt you for required options. CLI for Microsoft 365 is also more intuitive since all commands are grouped into areas like `spo` for SharePoint Online or `entra` for Entra ID, which makes it easier to find the command or operation you are looking for.
