Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -24,6 +24,7 @@ sidebar_position: 4
 - updated project & docs dependencies.
 - fixed killing teams process for 'teams cache remove' [#6515](https://github.com/pnp/cli-microsoft365/issues/6515)
 - fixed copy job polling [#6422](https://github.com/pnp/cli-microsoft365/issues/6422)
+- fixed asciinema player on render
 
 ## [v10.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.1.0)
 
