--- a/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
@@ -23,19 +23,19 @@ m365 spo file roleassignment remove [options]
 : The UniqueId (GUID) of the file. Specify either `fileUrl` or `fileId` but not both.
 
 `--principalId [principalId]`
-: The SharePoint Id of the principal. It may be either a user id or group id. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
+: The SharePoint Id of the principal. It may be either a user id or group id. Specify either `upn`, `groupName`, `entraGroupId`, `entraGroupName`, or `principalId` but not multiple.
 
 `--upn [upn]`
-: The upn/email of the user. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
+: The upn/email of the user. Specify either `upn`, `groupName`, `entraGroupId`, `entraGroupName`, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of the SharePoint group Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple. This option is only used for SharePoint Online groups.
+: The group name of the SharePoint group Specify either `upn`, `groupName`, `entraGroupId`, `entraGroupName`, or `principalId` but not multiple. This option is only used for SharePoint Online groups.
 
 `--entraGroupId [entraGroupId]`
-: ID of the Microsoft Entra group to add. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
+: ID of the Microsoft Entra group to add. Specify either `upn`, `groupName`, `entraGroupId`, `entraGroupName`, or `principalId` but not multiple.
 
 `--entraGroupName [entraGroupName]`
-: Display name of the Microsoft Entra group to add. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
+: Display name of the Microsoft Entra group to add. Specify either `upn`, `groupName`, `entraGroupId`, `entraGroupName`, or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation.
