Renames 'spo homesite' commands to 'spo tenant homesite'. Closes #6502

--- a/docs/docs/cmd/spo/tenant/tenant-homesite-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-get.mdx
@@ -2,11 +2,17 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo homesite get
+# spo tenant homesite get
 
 Gets information about the Home Site
 
 ## Usage
+
+```sh
+m365 spo tenant homesite get [options]
+```
+
+## Alias
 
 ```sh
 m365 spo homesite get [options]
@@ -21,7 +27,7 @@ m365 spo homesite get [options]
 Get information about the Home Site.
 
 ```sh
-m365 spo homesite get
+m365 spo tenant homesite get
 ```
 
 ## Response
@@ -62,7 +68,7 @@ m365 spo homesite get
   <TabItem value="Markdown">
 
   ```md
-  # spo homesite get
+  # spo tenant homesite get
 
   Date: 2/20/2023
 
