--- a/docs/docs/cmd/spo/tenant/tenant-homesite-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-remove.mdx
@@ -2,11 +2,17 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo homesite remove
+# spo tenant homesite remove
 
 Removes the current Home Site
 
 ## Usage
+
+```sh
+m365 spo tenant homesite remove [options]
+```
+
+## Alias
 
 ```sh
 m365 spo homesite remove [options]
@@ -34,7 +40,7 @@ To use this command you must be either **SharePoint Administrator** or **Global 
 Removes the current Home Site without confirmation.
 
 ```sh
-m365 spo homesite remove --force
+m365 spo tenant homesite remove --force
 ```
 
 ## Response
