--- a/docs/docs/cmd/spo/tenant/tenant-homesite-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-homesite-set.mdx
@@ -2,11 +2,17 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo homesite set
+# spo tenant homesite set
 
 Sets the specified site as the Home Site
 
 ## Usage
+
+```sh
+m365 spo tenant homesite set [options]
+```
+
+## Alias
 
 ```sh
 m365 spo homesite set [options]
@@ -37,19 +43,19 @@ To use this command you must be a Global or SharePoint administrator.
 Set the specified site as the Home Site.
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms
+m365 spo tenant homesite set --siteUrl https://contoso.sharepoint.com/sites/comms
 ```
 
 Sets the Home site to the provided site collection url and sets the Viva Connections landing experience to the SharePoint home site
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart true
+m365 spo tenant homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart true
 ```
 
 Sets the Home site to the provided site collection url and sets the Viva Connections landing experience to the default experience
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart false
+m365 spo tenant homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart false
 ```
 
 ## Response
