--- a/docs/docs/about/testimonials-quotes.mdx
+++ b/docs/docs/about/testimonials-quotes.mdx
@@ -77,6 +77,6 @@ If you would like to share your feedback with us, please [start a new discussion
     <p>Profile: https://www.linkedin.com/in/nanddeepnachan/</p>
   </div>
   <div className='col testimonial-quote'>
-    <p>The CLI for Microsoft 365 is an incredible tool that empowers customers to automate and streamline their tasks across Microsoft 365 services with ease and flexibility. Its cross-platform capabilities make it a versatile choice for managing SharePoint, Teams, and more, reducing manual efforts and enhancing productivity. <br /> As an active contributor to this project, I am proud to be part of a community driving innovation and simplifying Microsoft 365 management for users worldwide.</p>
+    <p>The CLI for Microsoft 365 is an incredible tool that empowers users to automate and streamline their tasks across Microsoft 365 services with ease and flexibility. Its cross-platform capabilities make it a versatile choice for managing SharePoint, Teams, and more, reducing manual effort and boosting productivity. <br /> As an active contributor to this project, I am proud to be part of a community that drives innovation and simplifies Microsoft 365 management for users worldwide.</p>
   </div>
 </div>
