--- a/docs/docs/cmd/entra/user/user-guest-add.mdx
+++ b/docs/docs/cmd/entra/user/user-guest-add.mdx
@@ -97,14 +97,17 @@ m365 entra user guest add --emailAddress john.doe@contoso.com --messageLanguage 
   <TabItem value="Text">
 
   ```text
-  id                     : 35f7f726-c541-4aef-a64e-a7b6868fe47f
-  inviteRedeemUrl        : https://login.microsoftonline.com/redeem?rd=https%3a%2f%2finvitations.microsoft.com%2fredeem%2f%3ftenant%3db373bc30-03b3-49bc-be72-9dd3e9027da8%26user%3d35f7f726-c541-4aef-a64e-a7b6868fe47f%26ticket%3dCjO3u3ZpQF2uthfZETfZ8gURzod5egvYI0uhaSN1Loo%25253d%26ver%3d2.0
-  invitedUserDisplayName : John Doe
-  invitedUserEmailAddress: liwidit556@adroh.com
-  invitedUserType        : Guest
-  resetRedemption        : false
-  sendInvitationMessage  : true
-  status                 : PendingAcceptance
+  id                       : "35f7f726-c541-4aef-a64e-a7b6868fe47f"
+  inviteRedeemUrl          : "https://login.microsoftonline.com/redeem?rd=https%3a%2f%2finvitations.microsoft.com%2fredeem%2f%3ftenant%3db373bc30-03b3-49bc-be72-9dd3e9027da8%26user%3d35f7f726-c541-4aef-a64e-a7b6868fe47f%26ticket%3dCjO3u3ZpQF2uthfZETfZ8gURzod5egvYI0uhaSN1Loo%25253d%26ver%3d2.0"
+  inviteRedirectUrl        : "https://myapplications.microsoft.com/"
+  invitedUser              : {id:"5257b5b2-4056-4a45-a05e-df5c92d53e6e"}
+  invitedUserDisplayName   : "John Doe"
+  invitedUserEmailAddress  : "john.doe@contoso.com"
+  invitedUserMessageInfo   : {ccRecipients:[{emailAddress:{address:"maria.jones@contoso.com",name:null}}],customizedMessageBody:"Hi John, welcome to the organization!",messageLanguage:"en-US"}
+  invitedUserType          : "Guest"
+  resetRedemption          : false
+  sendInvitationMessage    : true
+  status                   : "PendingAcceptance"
   ```
 
   </TabItem>
