--- a/docs/docs/cmd/planner/plan/plan-add.mdx
+++ b/docs/docs/cmd/planner/plan/plan-add.mdx
@@ -103,6 +103,8 @@ m365 planner plan add --title 'My Planner Plan' --ownerGroupName 'My Planner Gro
   <TabItem value="Text">
 
   ```text
+  container      : {"containerId":"ebf3b108-5234-4e22-b93d-656d7dae5874","type":"group","url":"https://graph.microsoft.com/v1.0/groups/ebf3b108-5234-4e22-b93d-656d7dae5874"}
+  createdBy      : {"application":{"displayName":null,"id":"ebf3b108-5234-4e22-b93d-656d7dae5874"},"user":{"displayName":null,"id":"95e27074-6c4a-447a-aa24-9d718a0b86fa"}}
   createdDateTime: 2015-03-30T18:36:49.2407981Z
   id             : xqQg5FS2LkCp935s-FIFm2QAFkHM
   owner          : ebf3b108-5234-4e22-b93d-656d7dae5874
