--- a/docs/docs/cmd/spo/group/group-member-add.mdx
+++ b/docs/docs/cmd/spo/group/group-member-add.mdx
@@ -127,9 +127,18 @@ m365 spo group member add --webUrl https://contoso.sharepoint.com/sites/SiteA --
   <TabItem value="Text">
 
   ```text
-  Title        UserPrincipalName
-  -----------  -------------------------------------
-  Adele Vance  Adele.Vance@contoso.onmicrosoft.com
+  Email                         : Adele.Vance@contoso.onmicrosoft.com
+  Expiration                    : 
+  Id                            : 11
+  IsEmailAuthenticationGuestUser: false
+  IsHiddenInUI                  : false
+  IsShareByEmailGuestUser       : false
+  IsSiteAdmin                   : false
+  LoginName                     : i:0#.f|membership|adelev@contoso.onmicrosoft.com
+  PrincipalType                 : 1
+  Title                         : Adele Vance
+  UserId                        : {"NameId":"10032001f5ac2029","NameIdIssuer":"urn:federation:microsoftonline"}
+  UserPrincipalName             : adelev@contoso.onmicrosoft.com
   ```
 
   </TabItem>
