--- a/docs/docs/cmd/todo/list/list-get.mdx
+++ b/docs/docs/cmd/todo/list/list-get.mdx
@@ -57,8 +57,11 @@ m365 todo list get --name "Task list"
   <TabItem value="Text">
 
   ```text
-  displayName    : Task list
-  id             : AAMkADY3NmM5ZjhiLTc3M2ItNDg5ZC1iNGRiLTAyM2FmMjVjZmUzOQAuAAAAAAAZ1T9YqZrvS66KkevskFAXAQBEMhhN5VK7RaaKpIc1KhMKAAAZ3e1AAAA=
+  displayName      : Task list
+  id               : AAMkADY3NmM5ZjhiLTc3M2ItNDg5ZC1iNGRiLTAyM2FmMjVjZmUzOQAuAAAAAAAZ1T9YqZrvS66KkevskFAXAQBEMhhN5VK7RaaKpIc1KhMKAAAZ3e1AAAA=
+  isOwner          : true
+  isShared         : false
+  wellknownListName: defaultList
   ```
 
   </TabItem>
