--- a/docs/docs/cmd/viva/engage/engage-message-add.mdx
+++ b/docs/docs/cmd/viva/engage/engage-message-add.mdx
@@ -126,7 +126,32 @@ m365 viva engage message add --body "Hello everyone!" --groupId 12312312312 --ne
   <TabItem value="Text">
 
   ```text
-  id: 2000337648877569
+  attachments         : []
+  body                : {"parsed":"Hello everyone!","plain":"Hello everyone!","rich":"Hello everyone!"}
+  chat_client_sequence: null
+  client_type         : O365 Api Auth
+  client_url          : https://api.yammer.com
+  content_excerpt     : Hello everyone!
+  created_at          : 2022/11/11 20:59:56 +0000
+  delegate_id         : null
+  direct_message      : false
+  group_created_id    : 31158067201
+  group_id            : 31158067201
+  id                  : 2000337346863105
+  language            : null
+  liked_by            : {"count":0,"names":[]}
+  message_type        : update
+  network_id          : 5897756673
+  notified_user_ids   : []
+  privacy             : public
+  replied_to_id       : null
+  sender_id           : 36425097217
+  sender_type         : user
+  supplemental_reply  : false
+  system_message      : false
+  thread_id           : 2000337346863105
+  url                 : https://www.yammer.com/api/v1/messages/2000337346863105
+  web_url             : https://www.yammer.com/contoso.onmicrosoft.com/messages/2000337346863105
   ```
 
   </TabItem>
