--- a/docs/docs/cmd/booking/business/business-get.mdx
+++ b/docs/docs/cmd/booking/business/business-get.mdx
@@ -131,12 +131,19 @@ m365 booking business get --name 'business name'
   <TabItem value="Text">
 
   ```text
-  businessType      : Financial services
-  defaultCurrencyIso: USD
-  displayName       : Accounting
-  email             : runningdevadmin@contoso.onmicrosoft.com
-  id                : Accounting@contoso.onmicrosoft.com
-  phone             :
+  address                  : {city:"",countryOrRegion:"",postalCode:"",state:"",street:""}
+  businessHours            : [{day:"monday",timeSlots:[{endTime:"17:00:00.0000000",startTime:"08:00:00.0000000"}]},{day:"tuesday",timeSlots:[{endTime:"17:00:00.0000000",startTime:"08:00:00.0000000"}]},{day:"wednesday",timeSlots:[{endTime:"17:00:00.0000000",startTime:"08:00:00.0000000"}]},{day:"thursday",timeSlots:[{endTime:"17:00:00.0000000",startTime:"08:00:00.0000000"}]},{day:"friday",timeSlots:[{endTime:"17:00:00.0000000",startTime:"08:00:00.0000000"}]},{day:"saturday",timeSlots:[]},{day:"sunday",timeSlots:[]}]
+  businessType             : "Financial services"
+  defaultCurrencyIso       : "USD"
+  displayName              : "Accounting"
+  email                    : "runningdevadmin@contoso.onmicrosoft.com"
+  id                       : "Accounting@contoso.onmicrosoft.com"
+  isPublished              : true
+  languageTag              : ""
+  phone                    : ""
+  publicUrl                : "https://outlook.office365.com/owa/calendar/Accounting@contoso.onmicrosoft.com/bookings/"
+  schedulingPolicy         : {allowStaffSelection:true,maximumAdvance:"P365D",minimumLeadTime:"P1D",sendConfirmationsToOwner:true,timeSlotInterval:"PT30M"}
+  webSiteUrl               : ""
   ```
 
   </TabItem>
