--- a/docs/docs/cmd/flow/flow-get.mdx
+++ b/docs/docs/cmd/flow/flow-get.mdx
@@ -282,10 +282,12 @@ m365 flow get --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --n
 
   ```text
   actions    : OpenApiConnection-AnalyzeImageV2, Compose, InitializeVariable, OpenApiConnection-HttpRequest, ParseJson, OpenApiConnection-PatchFileItem
-  description:
+  description: My Flow
   displayName: My Flow
+  id         : /providers/Microsoft.ProcessSimple/environments/Default-1e852b49-bf4b-4ba5-bcd4-a8c4706c8ed4/flows/ca76d7b8-3b76-4050-8c03-9fb310ad172f
   name       : ca76d7b8-3b76-4050-8c03-9fb310ad172f
   triggers   : OpenApiConnection
+  type       : Microsoft.ProcessSimple/environments/flows
   ```
 
   </TabItem>
@@ -319,4 +321,3 @@ m365 flow get --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --n
 
   </TabItem>
 </Tabs>
-
