--- a/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
+++ b/docs/docs/cmd/pp/dataverse/dataverse-table-get.mdx
@@ -114,10 +114,25 @@ m365 pp dataverse table get --environmentName "Default-2ca3eaa5-140f-4175-8261-3
   <TabItem value="Text">
 
   ```text
-  EntitySetName: aadusers
-  IsManaged    : false
-  LogicalName  : aaduser
-  SchemaName   : aaduser
+  CanChangeHierarchicalRelationship : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canchangehierarchicalrelationship"}
+  CanChangeTrackingBeEnabled        : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canchangetrackingbeenabled"}
+  CanCreateAttributes               : {"Value":true,"CanBeChanged":false,"ManagedPropertyLogicalName":"cancreateattributes"}
+  CanCreateCharts                   : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"cancreatecharts"}
+  CanCreateForms                    : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"cancreateforms"}
+  CanCreateViews                    : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"cancreateviews"}
+  CanEnableSyncToExternalSearchIndex: {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canenablesynctoexternalsearchindex"}
+  CanModifyAdditionalSettings       : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"canmodifyadditionalsettings"}
+  DataProviderId                    : null
+  EntitySetName                     : aadusers
+  IconVectorName                    : null
+  IsActivity                        : false
+  IsCustomEntity                    : true
+  IsCustomizable                    : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"iscustomizable"}
+  IsManaged                         : false
+  IsRenameable                      : {"Value":true,"CanBeChanged":true,"ManagedPropertyLogicalName":"isrenameable"}
+  LogicalName                       : aaduser
+  MetadataId                        : 84f4c125-474d-ed11-bba1-000d3a2caf7f
+  SchemaName                        : aaduser
   ```
 
   </TabItem>
