--- a/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
@@ -78,9 +78,14 @@ m365 pp solution publisher get --environmentName "Default-2ca3eaa5-140f-4175-826
   <TabItem value="Text">
 
   ```text
-  friendlyname: MicrosoftCorporation
-  publisherid : d21aab70-79e7-11dd-8874-00188b01e34f
-  uniquename  : MicrosoftCorporation
+  customizationoptionvalueprefix: 0
+  customizationprefix           : 
+  description                   : Publisher of Microsoft solutions
+  friendlyname                  : MicrosoftCorporation
+  isreadonly                    : false
+  publisherid                   : d21aab70-79e7-11dd-8874-00188b01e34f
+  uniquename                    : MicrosoftCorporation
+  versionnumber                 : 1226559
   ```
 
   </TabItem>
