🔥  Fix documentation and refine command options for website retrieval

--- a/docs/docs/cmd/pp/website/website-get.mdx
+++ b/docs/docs/cmd/pp/website/website-get.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # pp website get
 
-Gets information about the specified Power Pages websites.
+Gets information about the specified Power Pages website.
 
 ## Usage
 
@@ -15,17 +15,17 @@ m365 pp website get [options]
 ## Options
 
 ```md definition-list
-`--url [url]`
+`-u, --url [url]`
 : The URL of the website to retrieve. Specify either `url`, `name` or `id`.
 
 `-n, --name [name]`
 : The name of the website to retrieve. Specify either `url`, `name` or `id`.
 
 `-i, --id [id]`
-: The WebSiteId (GUID) of the website to retrieve. Specify either `url`, `name` or `id`.
+: The WebSite Id (GUID) of the website to retrieve. Specify either `url`, `name` or `id`.
 
 `-e, --environmentName <environmentName>`
-: The name of the environment for which to retrieve Power Pages website from.
+: The name of the environment from which to retrieve Power Pages website from.
 ```
 
 <Global />
