add documentation for default call

--- a/docs/docs/cmd/spo/list/list-get.mdx
+++ b/docs/docs/cmd/spo/list/list-get.mdx
@@ -42,6 +42,12 @@ When the `properties` option includes values with a `/`, for example: `ListItemA
 
 ## Examples
 
+Get the default document library located in the specified site.
+
+```sh
+m365 spo list get --webUrl https://contoso.sharepoint.com/sites/project-x
+```
+
 Get information about a list with specified ID located in the specified site.
 
 ```sh
